--- a/css.css
+++ b/css.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Inter-Black";
-  src: url("/assets/fonts/Inter-VariableFont_slnt\,wght.ttf");
+  src: url("./assets/fonts/Inter-VariableFont_slnt\,wght.ttf");
 }
 
 body {
