--- a/css.css
+++ b/css.css
@@ -88,6 +88,11 @@ body {
   height: 250px;
 }
 
+.attribution {
+  text-align: center;
+  margin: 30px;
+}
+
 @media screen and (min-width: 900px) {
   .card {
     width: 815px;
